tests/ui/traits/next-solver/cycles/normalizes-to-is-not-productive.stderr
error[E0277]: the trait bound `Foo: Bound` is not satisfied
  --> $DIR/normalizes-to-is-not-productive.rs:41:1
   |
LL | / fn generic<T>()
LL | |
LL | | where
LL | |     <Foo as Trait<T>>::Assoc: Bound,
   | |____________________________________^ unsatisfied trait bound
   |
help: the trait `Bound` is not implemented for `Foo`
  --> $DIR/normalizes-to-is-not-productive.rs:19:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
help: the trait `Bound` is implemented for `u32`
  --> $DIR/normalizes-to-is-not-productive.rs:12:1
   |
LL | impl Bound for u32 {
   | ^^^^^^^^^^^^^^^^^^
note: required for `Foo` to implement `Trait<T>`
  --> $DIR/normalizes-to-is-not-productive.rs:24:19
   |
LL | impl<T: Bound, U> Trait<U> for T {
   |         -----     ^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `<Foo as Trait<T>>::Assoc: Bound`
  --> $DIR/normalizes-to-is-not-productive.rs:44:31
   |
LL |     <Foo as Trait<T>>::Assoc: Bound,
   |                               ^^^^^

error[E0275]: overflow evaluating whether `<Foo as Trait<T>>::Assoc` is well-formed
  --> $DIR/normalizes-to-is-not-productive.rs:44:31
   |
LL |     <Foo as Trait<T>>::Assoc: Bound,
   |                               ^^^^^

error[E0275]: overflow evaluating the requirement `Foo: Bound`
  --> $DIR/normalizes-to-is-not-productive.rs:50:19
   |
LL |     impls_bound::<Foo>();
   |                   ^^^
   |
note: required by a bound in `impls_bound`
  --> $DIR/normalizes-to-is-not-productive.rs:28:19
   |
LL | fn impls_bound<T: Bound>() {
   |                   ^^^^^ required by this bound in `impls_bound`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0275, E0277.
For more information about an error, try `rustc --explain E0275`.
